@@ -385,5 +385,3 @@ Author of Hunspell executable is László Németh. For Hunspell library,
 see hunspell(3).
 .PP
 This manual based on Ispell's manual. See ispell(1).
-.SH BUGS
-There are some layout problems with long lines.
